--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 
 gems: [jekyll-paginate,jekyll-gist]
 # Setup
-title:            Sukesh
+title:            The Elysian Canvas
 tagline:          ''
 description:      ''
 url:              http://blog.theelysiancanvas.com
